--- a/servlet-basics-config/pom.xml
+++ b/servlet-basics-config/pom.xml
@@ -22,6 +22,13 @@
 			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.10</version>
+</dependency>
+		
 		
 	</dependencies>
 	
